main.tf
resource "aws_instance" "ec2" {
  ami             = var.ami
  instance_type   = var.instance_type
 security_groups = [aws_security_group.SG.name]
 vpc_ids= "vpc-0db6c555566d65de5"    


  count = 1
  tags = {
    Name = "ec2instance"
  }

}

resource "aws_security_group" "SG" {
  name        = "security group terraform"
  description = "security group using terraform"
  vpc_id = "vpc-0db6c555566d65de5"

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }



  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "TF_SG"
}
}
